--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.1",
+    "@types/canvas-confetti": "^1.9.0",
+    "canvas-confetti": "^1.9.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.24",
+    "html-to-image": "^1.11.13",
     "lucide-react": "^0.469.0",
     "next": "15.1.2",
     "octokit": "^4.0.2",
